Make button modifier classes more explicit

--- a/bedrock/firefox/templates/firefox/channel/base.html
+++ b/bedrock/firefox/templates/firefox/channel/base.html
@@ -89,7 +89,7 @@
   </div>
   <aside id="newsletter-subscribe">
     <div class="container">
-      {{ email_newsletter_form(title=_('<span>Firefox</span> + You'), subtitle=_('Get Firefox tips, tricks, news and more'), button_class='light') }}
+      {{ email_newsletter_form(title=_('<span>Firefox</span> + You'), subtitle=_('Get Firefox tips, tricks, news and more'), button_class='button-light') }}
     </div>
   </aside>
 </main>
