--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -149,7 +149,7 @@
   <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="content container">
       {# L10n: Line break for visual formatting. #}
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='light') }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='button-light') }}
     </div>
   </aside>
 {% endblock %}
