--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -31,7 +31,7 @@
         <h1>{{ _('More protection. <br>The most privacy. <br>Only from Firefox.') }}</h1>
         <div class="download-buttons">
           <div class="firefox-latest-cta">
-            <a class="try-pb-button button dark" data-highlight="privateWindow" data-link-type="button" data-link-name="Try Private Browsing" data-cta-position="Primary" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
+            <a class="try-pb-button button button-dark" data-highlight="privateWindow" data-link-type="button" data-link-name="Try Private Browsing" data-cta-position="Primary" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
           </div>
           <div class="non-firefox-cta">
             <p>{{ _('To give the new Private Browsing a try, download Firefox.') }}</p>
@@ -126,7 +126,7 @@
   <aside id="newsletter-subscribe" class="light ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="container">
       {# L10n: Line break for visual formatting. #}
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='dark') }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='button-dark') }}
     </div>
   </aside>
 {% endblock %}
@@ -136,7 +136,7 @@
       <div class="download-buttons">
         <div class="firefox-latest-cta">
           <h2>{{ _('Try it now to stay in control') }}</h2>
-          <a class="try-pb-button button dark" data-highlight="privateWindow" data-link-type="button" data-link-name="Try Private Browsing" data-cta-position="Secondary" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
+          <a class="try-pb-button button button-dark" data-highlight="privateWindow" data-link-type="button" data-link-name="Try Private Browsing" data-cta-position="Secondary" href="https://support.mozilla.org/kb/private-browsing-use-firefox-without-history/">{{ _('Try Private Browsing') }}</a>
         </div>
         <div class="non-firefox-cta">
           <h2>{{ _('To give the new Private Browsing a try, download Firefox.') }}</h2>
