--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -257,7 +257,7 @@
   <aside id="newsletter-subscribe" class="light ga-section" data-ga-label="Keep up with all things Firefox.">
     <div class="inner-wrapper container">
       {# L10n: Line break for visual formatting. #}
-      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='dark') }}
+      {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='button-dark') }}
     </div>
   </aside>
 {% endblock %}
