--- a/bedrock/firefox/templates/firefox/testflight.html
+++ b/bedrock/firefox/templates/firefox/testflight.html
@@ -53,7 +53,7 @@
             <label for="id_email">{{ _('Email') }}</label>
             {{ newsletter_form.email|safe }}
           </div>
-          <button class="button dark" id="footer_email_submit" type="submit">Submit</button>
+          <button class="button button-dark" id="footer_email_submit" type="submit">Submit</button>
         </div>{#-- /#email-submit-wrapper --#}
 
         <div id="terms-format-wrapper">
