--- a/bedrock/mozorg/templates/mozorg/browser-test.html
+++ b/bedrock/mozorg/templates/mozorg/browser-test.html
@@ -94,7 +94,7 @@
       {{ email_newsletter_form(newsletters='app-dev',
          include_language=False,
          title=_('Learn the best of web development'),
-         subtitle=_('Sign up for Mozilla’s newsletter.'), button_class='light')
+         subtitle=_('Sign up for Mozilla’s newsletter.'), button_class='button-light')
       }}
     </div>
   </aside>
