--- a/bedrock/mozorg/templates/mozorg/moss/base.html
+++ b/bedrock/mozorg/templates/mozorg/moss/base.html
@@ -70,7 +70,7 @@
     {{ email_newsletter_form(newsletters='mozilla-foundation',
        title=_('What’s next?'),
        subtitle=_('Get the Mozilla newsletter for our latest tech news and more.'),
-       button_class='light',
+       button_class='button-light',
        spinner_color='#fff')
     }}
   </div>
