--- a/bedrock/mozorg/templates/mozorg/technology.html
+++ b/bedrock/mozorg/templates/mozorg/technology.html
@@ -126,7 +126,7 @@
     <div class="content">
       {{ email_newsletter_form(newsletters='mozilla-foundation',
          title=_('What’s next?'),
-         subtitle=_('Get the Mozilla newsletter for our latest tech news and more.'), button_class='light')
+         subtitle=_('Get the Mozilla newsletter for our latest tech news and more.'), button_class='button-light')
       }}
     </div>
   </aside>
