--- a/bedrock/newsletter/templates/newsletter/developer.html
+++ b/bedrock/newsletter/templates/newsletter/developer.html
@@ -43,7 +43,7 @@
         <h1 class="page-title">{{ self.page_title() }}</h1>
         <h2 class="section-title">{{ self.page_desc() }} {{ _('If you don’t like the Mozilla developer newsletter, you can easily unsubscribe (but we think you’ll like it).') }}</h2>
       </header>
-      {{ email_newsletter_form(newsletters='app-dev', include_language=False, include_title=False, spinner_color='#0c99d5', button_class='hollow') }}
+      {{ email_newsletter_form(newsletters='app-dev', include_language=False, include_title=False, spinner_color='#0c99d5', button_class='button-hollow') }}
     </div>
   </section>
 </main>
