--- a/bedrock/newsletter/templates/newsletter/firefox.html
+++ b/bedrock/newsletter/templates/newsletter/firefox.html
@@ -43,7 +43,7 @@
         <h1 class="page-title">{{ self.page_title() }}</h1>
         <h2 class="section-title">{{ self.page_desc() }}</h2>
       </header>
-      {{ email_newsletter_form(include_title=False, spinner_color='#3a304b', button_class='hollow') }}
+      {{ email_newsletter_form(include_title=False, spinner_color='#3a304b', button_class='button-hollow') }}
     </div>
   </section>
 </main>
