--- a/bedrock/newsletter/templates/newsletter/mozilla.html
+++ b/bedrock/newsletter/templates/newsletter/mozilla.html
@@ -43,7 +43,7 @@
     <div class="content">
       <h2 class="section-title">{{ self.page_desc() }}</h2>
 
-      {{ email_newsletter_form(newsletters='mozilla-foundation', include_title=False, spinner_color='#c13832', button_class='red') }}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', include_title=False, spinner_color='#c13832', button_class='button-red') }}
 
     </div>
   </section>
