--- a/bedrock/styleguide/templates/styleguide/websites/pebbles.html
+++ b/bedrock/styleguide/templates/styleguide/websites/pebbles.html
@@ -19,32 +19,32 @@
 
       <p>
         <button class="button">button</button>
-        <button class="button red">red button</button>
-        <button class="button green">green button</button>
-        <button class="button orange">orange button</button>
-        <button class="button dark">dark button</button>
+        <button class="button button-red">red button</button>
+        <button class="button button-green">green button</button>
+        <button class="button button-orange">orange button</button>
+        <button class="button button-dark">dark button</button>
       </p>
 
       <p>
-        <button class="button hollow">hollow button</button>
-        <button class="button hollow red">hollow red button</button>
-        <button class="button hollow dark">hollow dark button</button>
-        <button class="button hollow light">hollow light button</button>
+        <button class="button button-hollow">hollow button</button>
+        <button class="button button-hollow button-red">hollow red button</button>
+        <button class="button button-hollow button-dark">hollow dark button</button>
+        <button class="button button-hollow button-light">hollow light button</button>
       </p>
 
       <p>
         <a href="#" class="button">link</a>
-        <a href="#" class="button red">red link</a>
-        <a href="#" class="button green">green link</a>
-        <a href="#" class="button orange">orange link</a>
-        <a href="#" class="button dark">dark link</a>
+        <a href="#" class="button button-red">red link</a>
+        <a href="#" class="button button-green">green link</a>
+        <a href="#" class="button button-orange">orange link</a>
+        <a href="#" class="button button-dark">dark link</a>
       </p>
 
       <p>
-        <a href="#" class="button hollow">hollow link</a>
-        <a href="#" class="button hollow red">hollow red link</a>
-        <a href="#" class="button hollow dark">hollow dark link</a>
-        <a href="#" class="button hollow light">hollow light link</a>
+        <a href="#" class="button button-hollow">hollow link</a>
+        <a href="#" class="button button-hollow button-red">hollow red link</a>
+        <a href="#" class="button button-hollow button-dark">hollow dark link</a>
+        <a href="#" class="button button-hollow button-light">hollow light link</a>
       </p>
 
       <h3>Lists: Level Three Heading</h3>
