--- a/media/css/firefox/accounts.less
+++ b/media/css/firefox/accounts.less
@@ -93,7 +93,7 @@ aside {
     }
 }
 
-.button.dark {
+.button.button-dark {
     .font-size(20px);
 }
 
@@ -106,8 +106,8 @@ aside {
 .download-firefox,
 .non-firefox,
 .old-firefox,
-.button.dark.firefox-ios,
-.button.dark.firefox-android, {
+.button.button-dark.firefox-ios,
+.button.button-dark.firefox-android, {
     display: none;
 }
 
@@ -161,7 +161,7 @@ aside {
     .mobile {
         display: block;
     }
-    .button.dark.firefox-ios {
+    .button.button-dark.firefox-ios {
         display: inline-block;
     }
 }
@@ -170,7 +170,7 @@ aside {
     .mobile {
         display: block;
     }
-    .button.dark.firefox-android {
+    .button.button-dark.firefox-android {
         display: inline-block;
     }
 }
@@ -278,7 +278,7 @@ aside {
     }
 
     .main-copy .tagline,
-    .button.dark {
+    .button.button-dark {
         .font-size(18px);
     }
 }
