--- a/media/css/firefox/australis/fx38_0_5/firstrun.less
+++ b/media/css/firefox/australis/fx38_0_5/firstrun.less
@@ -57,7 +57,7 @@ h2 {
     color: #fff;
     padding-bottom: 60px;
 
-    .button.green {
+    .button.button-green {
         display: block;
         margin: 10px auto;
 
