--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -597,7 +597,7 @@ a.go {
 
 // Send to Device Widget
 #send-to-device,
-.send-to.button.green {
+.button.send-to {
     display: none;
 }
 
@@ -607,8 +607,8 @@ a.go {
     .appstore-badge {
         display: none;
     }
-    .send-to.button.green  {
-        display: inline;
+    .button.send-to  {
+        display: inline-block;
     }
     #send-to-device {
         display: block;
@@ -622,7 +622,7 @@ a.go {
         display: block;
     }
     #send-to-device,
-    .send-to.button.green  {
+    .button.send-to  {
         display: none;
     }
 }
