--- a/media/css/firefox/os/firefox-os-2-5.less
+++ b/media/css/firefox/os/firefox-os-2-5.less
@@ -267,7 +267,7 @@ section {
     }
 }
 
-.cta-button.button.green {
+.cta-button.button.button-green {
     padding-left: 66px;
     margin-bottom: @baseLine;
 
