--- a/bedrock/firefox/templates/firefox/firstrun/yahoo-retention.html
+++ b/bedrock/firefox/templates/firefox/firstrun/yahoo-retention.html
@@ -46,7 +46,7 @@
   </h2>
   <h1>{{ self.page_title() }}</h1>
   <p>{{ self.page_desc() }}</p>
-  <a href="https://support.mozilla.org/en-US/kb/use-search-bar-firefox" id="try-it" role="button" class="button dark">{{ _('Search') }}</a>
+  <a href="https://support.mozilla.org/en-US/kb/use-search-bar-firefox" id="try-it" role="button" class="button button-dark">{{ _('Search') }}</a>
   <small>{{ _('Yahoo is one of Mozilla’s search partners. <a href="%s">Learn more.</a>')|format('https://blog.mozilla.org/blog/2015/11/11/a-new-yahoo-search-experience-for-firefox-users-in-u-s/') }}</small>
 </main>
 {% endblock %}
