--- a/bedrock/firefox/templates/firefox/new/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/scene1.html
@@ -126,7 +126,7 @@
     </section>
     <aside id="newsletter-subscribe">
       <div class="container">
-        {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='light') }}
+        {{ email_newsletter_form(title=_('Keep up with<br> all things Firefox.'), button_class='button-light') }}
       </div>
     </aside>
   </div>
