--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
@@ -46,7 +46,7 @@
 {% block email_form_unwrapped %}
   <section id="newsletter-subscribe" class="light">
     <div class="container">
-      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Keep in touch with Mozilla. Sign up for our newsletter.'), button_class='dark') }}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Keep in touch with Mozilla. Sign up for our newsletter.'), button_class='button-dark') }}
     </div>
   </section>
 
