--- a/bedrock/mozorg/templates/mozorg/home/home-voices.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-voices.html
@@ -152,7 +152,7 @@
             <img width="176" height="184" src="{{ static('img/home/voices/promos/download-firefox/firefox-logo.png') }}" alt="">
           </div>
           <div class="secondary">
-            {{ download_firefox(alt_copy=_('Free Download'), button_color='transparent-light', dom_id='promo-download-fx-button') }}
+            {{ download_firefox(alt_copy=_('Free Download'), button_color='button-hollow button-light', dom_id='promo-download-fx-button') }}
             <a class="fxos-link" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more') }}</a>
             <a class="unrecognized-short-link" href="{{ url('firefox.new') }}">{{_('Download Firefox')}}</a>
           </div>
@@ -349,9 +349,9 @@
   <section class="module" id="newsletter-subscribe">
     <div class="container">
     {% if LANG.startswith('en-') %}
-      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.'), button_class='light') }}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.'), button_class='button-light') }}
     {% else %}
-      {{ email_newsletter_form(button_class='light') }}
+      {{ email_newsletter_form(button_class='button-light') }}
     {% endif %}
     </div>
   </section>
