--- a/media/css/firefox/whatsnew/whatsnew-42.less
+++ b/media/css/firefox/whatsnew/whatsnew-42.less
@@ -37,7 +37,7 @@ body {
     display: none;
 }
 
-.button.dark {
+.button.button-dark {
     .font-size(24px);
 
     @media only screen and (max-width: @breakDesktop) {
