Removal of participation hub section from mozilla.org

--- a/media/css/firefox/os/firefox-os-2-5.less
+++ b/media/css/firefox/os/firefox-os-2-5.less
@@ -61,8 +61,7 @@ section {
     }
 }
 .fxos-hero-space,
-.fxos-mdn,
-.fxos-hub {
+.fxos-mdn{
     a, h1, h2 {
         color: #fff;
         text-shadow: none;
@@ -218,24 +217,6 @@ section {
     }
 }
 
-.fxos-hub {
-    .content-wrapper {
-        padding: 70px 0 50px 0;
-    }
-    p {
-        color: #bee1f5;
-        padding: 0 @baseLine;
-    }
-    .hub-container {
-        float: left;
-        width: 600px;
-        margin-left: 60px;
-    }
-    .hub-image {
-        margin: -30px 60px 0 60px;
-    }
-}
-
 .fxos-mdn {
     .at2x('/media/img/firefox/os-new/bg.png', 26px);
 
@@ -328,7 +309,6 @@ section {
     }
 
     .fxos-features,
-    .fxos-hub,
     .fxos-mdn {
         p {
             .font-size(25px);
@@ -341,16 +321,13 @@ section {
         letter-spacing: 0px;
     }
 
-    .fxos-mdn,
-    .fxos-hub {
-        .mdn-container,
-        .hub-container {
+    .fxos-mdn{
+        .mdn-container{
             width: 100%;
             float: none;
             margin: 0;
         }
-        .mdn-image,
-        .hub-image {
+        .mdn-image{
             width: 100%;
             float: none;
             margin: 0;
@@ -405,7 +382,6 @@ section {
     }
 
     .fxos-features,
-    .fxos-hub,
     .fxos-mdn {
         p {
             .font-size(23px);
@@ -415,12 +391,6 @@ section {
 
     .fxos-features {
         padding: 0;
-    }
-
-    .fxos-hub {
-        .hub-image {
-            margin: 40px 0 0 0;
-        }
     }
 
     .fxos-try {
