--- a/bedrock/base/templates/base.html
+++ b/bedrock/base/templates/base.html
@@ -99,22 +99,12 @@
         {% block site_header_nav %}
         <nav id="nav-main" role="navigation">
           <ul>
-          {% if LANG.startswith('en-') %}
             <li class="first internet-health-item">
               <a href="{{ url('mozorg.internet-health') }}" data-link-type="nav" data-link-name="Internet Health">{{ _('Internet Health') }}</a>
             </li>
             <li class="technology-item">
-              {# L10n: these strings are both potential navigation labels #}
-              <a href="{{ url('mozorg.technology') }}" data-link-type="nav" data-link-name="Web Innovations" data-alt-text="{{ _('Innovations') }}">{{ _('Web Innovations') }}</a>
+              <a href="{{ url('mozorg.technology') }}" data-link-type="nav" data-link-name="Web Innovations">{{ _('Web Innovations') }}</a>
             </li>
-          {% else %}
-            <li class="first about-item">
-              <a href="{{ url('mozorg.about') }}" data-link-type="nav" data-link-name="About">{{ _('About') }}</a>
-            </li>
-            <li class="contribute-item">
-              <a href="{{ url('mozorg.contribute.index') }}" data-link-type="nav" data-link-name="Participate">{{ _('Participate') }}</a>
-            </li>
-          {% endif %}
             <li class="last donate-item">
               <a href="{{ donate_url('header') }}" data-link-type="nav" data-link-name="Donate">{{_('Donate')}}</a>
             </li>
