Fix Bug 1328409 - Make Firefox pre-release redirects platform-aware

--- a/bedrock/firefox/templates/firefox/channel/desktop.html
+++ b/bedrock/firefox/templates/firefox/channel/desktop.html
@@ -56,6 +56,8 @@
 </section>
 
 <section id="developer" class="channel">
+  {#- Accept the channel name anchor as well, which is compatible with the Android channel page -#}
+  <span id="aurora"></span>
   <div class="container">
     <header>
       <h2>{{_('Developer Edition')}}</h2>
