--- a/media/css/firefox/accounts.less
+++ b/media/css/firefox/accounts.less
@@ -107,7 +107,7 @@ aside {
 .non-firefox,
 .old-firefox,
 .button.button-dark.firefox-ios,
-.button.button-dark.firefox-android, {
+.button.button-dark.firefox-android {
     display: none;
 }
 
