--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -143,8 +143,7 @@ body.nightly {
             }
         }
         .unavailable {
-            padding-right: @baseLine * 2;
-            padding: 10px 10px 10px 10px;
+            padding: 10px;
             background-repeat: no-repeat;
             color: @textColorTertiary;
             text-shadow: 0 -1px #fff;
