--- a/media/css/firefox/australis/fx38_0_5/firstrun.less
+++ b/media/css/firefox/australis/fx38_0_5/firstrun.less
@@ -107,7 +107,8 @@ h2 {
 
         li {
             display: inline;
-            margin: 0 10px;
+            margin-left: 10px;
+            margin-right: 10px;
 
             &:after {
                 content: '•';
