--- a/media/css/firefox/desktop/customize.less
+++ b/media/css/firefox/desktop/customize.less
@@ -528,7 +528,7 @@ html[dir="rtl"] {
             30% { opacity: 1; }
             50% {
                 opacity: 1;
-                webkit-transform: scale3d(1.2, 1.2, 0);
+                -webkit-transform: scale3d(1.2, 1.2, 0);
                 transform: scale3d(1.2, 1.2, 0);
             }
             100% {
