--- a/media/css/firefox/firstrun/firstrun-horizon.less
+++ b/media/css/firefox/firstrun/firstrun-horizon.less
@@ -235,7 +235,8 @@ footer {
 
         li {
             display: inline;
-            margin: 0 10px;
+            margin-left: 10px;
+            margin-right: 10px;
 
             &:after {
                 color: #fff;
