--- a/media/css/firefox/firstrun/firstrun.less
+++ b/media/css/firefox/firstrun/firstrun.less
@@ -150,7 +150,8 @@ footer {
 
         li {
             display: inline;
-            margin: 0 10px;
+            margin-left: 10px;
+            margin-right: 10px;
 
             &:after {
                 content: '•';
