--- a/media/css/firefox/unsupported.less
+++ b/media/css/firefox/unsupported.less
@@ -82,7 +82,7 @@ html[lang='si'], html[lang='bn-IN'], html[lang='ka'], html[lang='kn']  {
 }
 
 html[lang="th"] #details-header p {
-    font-size:80% !important;
+    font-size:80%;
 }
 
 html[lang='th'] li{
