--- a/media/css/l10n/zh-TW/intl.css
+++ b/media/css/l10n/zh-TW/intl.css
@@ -1,9 +1,9 @@
 /* Bug 795396 */
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: normal;
-  src: /* OS X */
+    font-family: X-LocaleSpecific;
+    font-weight: normal;
+    src: /* OS X */
        local(FZLTXHB--B51-0), /* = Lantinghei TC Extralight */
        /* Windows */
        local('Microsoft JhengHei Light'),
@@ -12,9 +12,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: bold;
-  src: /* OS X */
+    font-family: X-LocaleSpecific;
+    font-weight: bold;
+    src: /* OS X */
        local(FZLTZHB--B51-0), /* = Lantinghei TC Demibold */
        /* Windows */
        local('Microsoft JhengHei Bold'),
@@ -23,9 +23,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific-Extrabold;
-  font-weight: 800;
-  src: /* OS X */
+    font-family: X-LocaleSpecific-Extrabold;
+    font-weight: 800;
+    src: /* OS X */
        local(FZLTTHB--B51-0), /* = Lantinghei TC Heavy */
        /* Windows */
        local('Microsoft JhengHei Bold'),
@@ -36,5 +36,6 @@
 /* Bug 973171 */
 
 * {
-  font-style: normal !important;
+    /* !important required for locale specific override */
+    font-style: normal !important; /* stylelint-disable-line declaration-no-important */
 }
