--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -800,7 +800,7 @@
     .message,
     .block1,
     .block2,
-    .block3, {
+    .block3 {
         background: url(/media/img/mozorg/history/fact05-pads.png) no-repeat;
     }
 
