--- a/media/css/mozorg/home/home-voices.less
+++ b/media/css/mozorg/home/home-voices.less
@@ -687,7 +687,7 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen and (min-width: (@widthSquareGrid_8)) {
 
     .module .container,
-    .main-header .container, {
+    .main-header .container {
         width: @widthSquareGrid_8 - (@gridGutterWidth * 2);
     }
 
@@ -751,7 +751,7 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen and (min-width: @widthSquareGrid_7) and (max-width: (@widthSquareGrid_8 - 1)) {
 
     .module .container,
-    .main-header .container, {
+    .main-header .container {
         width: @widthSquareGrid_7 - (@gridGutterWidth * 2);
     }
 
