--- a/media/css/mozorg/manifesto.less
+++ b/media/css/mozorg/manifesto.less
@@ -157,35 +157,35 @@
 #principle-06,
 #principle-01-overlay,
 #principle-06-overlay {
-    background: #00A0DB !important;
+    background: #00A0DB;
 }
 
 #principle-02,
 #principle-07,
 #principle-02-overlay,
 #principle-07-overlay {
-    background: #DD5A00 !important;
+    background: #DD5A00;
 }
 
 #principle-03,
 #principle-08,
 #principle-03-overlay,
 #principle-08-overlay {
-    background: #689F2A !important;
+    background: #689F2A;
 }
 
 #principle-04,
 #principle-09,
 #principle-04-overlay,
 #principle-09-overlay {
-    background: #4B5C66 !important;
+    background: #4B5C66;
 }
 
 #principle-05,
 #principle-10,
 #principle-05-overlay,
 #principle-10-overlay {
-    background: #A52D2D !important;
+    background: #A52D2D;
 }
 
 .principle {
