--- a/media/css/styleguide/docs/mozilla-pager.less
+++ b/media/css/styleguide/docs/mozilla-pager.less
@@ -35,7 +35,8 @@
 
 .pager-nav-links-wrapper {
     display: inline;
-    margin: 0 (@baseLine / 2);
+    margin-left: @baseLine / 2;
+    margin-right: @baseLine / 2;
 }
 
 .pager-nav-divider {
