--- a/media/css/foundation/annual2011print.css
+++ b/media/css/foundation/annual2011print.css
@@ -123,7 +123,8 @@ h1, h2, h3, h4, h5, h6 {
 #masthead {
   padding-bottom: 20px;
   border-bottom: 1px solid;
-  margin: 0 !important;
+  /* !important required for print stylesheet overrides */
+  margin: 0 !important; /* stylelint-disable-line declaration-no-important */
 }
 
 #masthead h1 {
@@ -178,6 +179,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 20px 20px;
 }
 
+/* !important required for print stylesheet overrides */
+/* stylelint-disable declaration-no-important  */
 .jcarousel-list {
   margin-top: 1em;
   width: 100% !important;
@@ -191,6 +194,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   margin: 0 20px 20px;
 }
+/* stylelint-enable */
 
 #story-slider .vcard:nth-child(odd),
 #story-slider-clone .vcard:nth-child(odd) {
