--- a/media/css/l10n/fa/intl.css
+++ b/media/css/l10n/fa/intl.css
@@ -1,19 +1,20 @@
 /* Bug 958321 */
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: normal;
-  src: url('/media/fonts/l10n/DroidNaskh-Regular.woff') format('woff');
+    font-family: X-LocaleSpecific;
+    font-weight: normal;
+    src: url('/media/fonts/l10n/DroidNaskh-Regular.woff') format('woff');
 }
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: bold;
-  src: url('/media/fonts/l10n/DroidNaskh-Bold.woff') format('woff');
+    font-family: X-LocaleSpecific;
+    font-weight: bold;
+    src: url('/media/fonts/l10n/DroidNaskh-Bold.woff') format('woff');
 }
 
 /* Bug 944269 */
 
 * {
-  letter-spacing: normal !important;
+    /* !important required for locale specific override */
+    letter-spacing: normal !important; /* stylelint-disable-line declaration-no-important */
 }
