--- a/media/css/l10n/ja/intl.css
+++ b/media/css/l10n/ja/intl.css
@@ -1,9 +1,9 @@
 /* Bug 993702 */
 
 @font-face {
-  font-family: X-LocaleSpecific-Light;
-  font-weight: normal;
-  src: /* All */
+    font-family: X-LocaleSpecific-Light;
+    font-weight: normal;
+    src: /* All */
        local(mplus-2p-light),
        local(KozGoPro-Light),
        /* OS X */
@@ -19,9 +19,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific-Light;
-  font-weight: bold;
-  src: /* All */
+    font-family: X-LocaleSpecific-Light;
+    font-weight: bold;
+    src: /* All */
        local(mplus-2p-medium),
        local(KozGoPro-Medium),
        /* OS X */
@@ -37,9 +37,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: normal;
-  src: /* All */
+    font-family: X-LocaleSpecific;
+    font-weight: normal;
+    src: /* All */
        local(mplus-2p-regular),
        local(KozGoPro-Regular),
        /* OS X */
@@ -55,9 +55,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific;
-  font-weight: bold;
-  src: /* All */
+    font-family: X-LocaleSpecific;
+    font-weight: bold;
+    src: /* All */
        local(mplus-2p-bold),
        local(KozGoPro-Bold),
        /* OS X */
@@ -73,9 +73,9 @@
 }
 
 @font-face {
-  font-family: X-LocaleSpecific-Extrabold;
-  font-weight: 800;
-  src: /* All */
+    font-family: X-LocaleSpecific-Extrabold;
+    font-weight: 800;
+    src: /* All */
        local(mplus-2p-black),
        local(KozGoPro-Heavy),
        /* OS X */
@@ -93,5 +93,6 @@
 /* Bug 973171 */
 
 * {
-  font-style: normal !important;
+    /* !important required for locale specific override */
+    font-style: normal !important;  /* stylelint-disable-line declaration-no-important */
 }
