--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -297,6 +297,9 @@ ul.download-list {
     }
 }
 
+/* !important used for strict download link enforcement */
+/* stylelint-disable declaration-no-important  */
+
 // Product download buttons
 .download-button {
     .ios-download,
@@ -416,6 +419,8 @@ ul.download-list {
 .windows.sha-1 .download-button .os_winsha1 {
     display: block !important;
 }
+
+/* stylelint-enable */
 
 // l10n download button tweaks
 html[lang="ml"] {
