[fix bug 1309692] Unique page title is missing on the refreshed Foundation pages

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -111,6 +111,7 @@
     .open-sans-light;
     h2 {
         .font-size(40px);
+        margin-bottom: @baseLine;
     }
     p{
         .font-size(26px);
