--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -37,7 +37,9 @@
       <div class="content content-main">
       <div class="main-column">
         <header class="section-header">
-        {% block article_header %}{% endblock %}
+        {% block article_header %}
+          <h2>{{ self.page_title() }}</h2>
+        {% endblock %}
         </header>
         {% block article %}{% endblock %}
       </div>
